src/test/ui/on-unimplemented/slice-index.stderr
error[E0277]: the type `[i32]` cannot be indexed by `i32`
  --> $DIR/slice-index.rs:8:5
   |
LL |     x[1i32];
   |     ^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[i32]>` is not implemented for `i32`
   = note: required because of the requirements on the impl of `Index<i32>` for `[i32]`

error[E0277]: the type `[i32]` cannot be indexed by `RangeTo<i32>`
  --> $DIR/slice-index.rs:9:5
   |
LL |     x[..1i32];
   |     ^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[i32]>` is not implemented for `RangeTo<i32>`
   = note: required because of the requirements on the impl of `Index<RangeTo<i32>>` for `[i32]`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
